main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
    region = "us-east-1"
    access_key = ""
    secret_key = ""
}


# Create a resource
#resource "aws_instance" "example" {
  #ami = "ami-04505e74c0741db8d"
 # instance_type = "t2.micro"
 # tags = {
 #   Name = "Updating practice" 
#  }
#}

#resource "aws_vpc" "first-vpc" {
 #   cidr_block = "10.0.0.0/16"
  #  tags = {
  #      Name = "production"

  #  }
  #}

#resource "aws_subnet" "subnet-1" {
  #vpc_id     = aws_vpc.first-vpc.id
#  cidr_block = "10.0.1.0/24"

 # tags = {
 #   Name = "Prod-subnet"
  #}
#}



# # 1. Create vpc
resource "aws_vpc" "IAC-practice" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "IAC practice"
  }
}
# # 2. Create Internet Gateway
resource "aws_internet_gateway" "IAC-GW" {
  vpc_id = aws_vpc.IAC-practice.id

  tags = {
    Name = "IAC-GW"
  }
}

# # 3. Create Custom Route Table
resource "aws_route_table" "IAC" {
  vpc_id = aws_vpc.IAC-practice.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.IAC-GW.id
  }
 
  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.IAC-GW.id
  }

  tags = {
    Name = "IAC-RT"
  }
}

# # 4. Create a Subnet 
resource "aws_subnet" "IAC-SN" {
  vpc_id     = aws_vpc.IAC-practice.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "IAC"
  }
}
# # 5. Associate subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.IAC-SN.id
  route_table_id = aws_route_table.IAC.id
}
# # 6. Create Security Group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.IAC-practice.id

  ingress {
    description      = "HTTP from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    
  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    
  

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}
# # 7. Create a network interface with an ip in the subnet that was created in step 4
resource "aws_network_interface" "web-server" {
  subnet_id       = aws_subnet.IAC-SN.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]


}
# # 8. Assign an elastic IP to the network interface created in step 7
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.IAC-GW]
}

output "server_public_ip" {
  value = aws_eip.one.public_ip
}
# # 9. Create Ubuntu server and install/enable apache2
resource "aws_instance" "web-server" {
  ami = "ami-04505e74c0741db8d"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "asif"
  
  network_interface {
      device_index = 0
      network_interface_id = aws_network_interface.web-server.id
  }

  user_data = <<-EOF
            #!/bin/bash
            sudo apt-get update -y
            sudo apt-get install apache2 -y
            sudo systemctl start apache2
            sudo bash -c 'echo your very first web server > /var/www/html/index.html'
            EOF

  tags = {
    Name = "IAC" 
  }
}

output "server_private_ip" {
  value = aws_instance.web-server.private_ip
  
}
output "server_id" {
  value = aws_instance.web-server.id
}
